# leanpub-scraper

./: .env.example  Cargo.toml  README.md
.github/: copilot-instructions.md
src/: main.rs
