[package]
name = "leanpub-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking", "cookies"] }
tokio = { version = "1.37", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.18"
playwright = "0.0.20"
