[package]
name = "leanpub-scraper"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A command line tool to access Leanpub by scraping the web site"
keywords = ["cli", "web", "scrape", "leanpub"]
categories = ["web-programming::http-client"]
readme = "README.md"
repository = "https://github.com/szabgab/leanpub-scraper/"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
playwright = "0.0.20"
